# Uno

./: .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
localtest/: CMakeLists.txt
localtest/include/: hs71.hpp
localtest/src/: hs71.cpp
nlp_test/: CMakeLists.txt
nlp_test/include/: hs71.hpp
nlp_test/src/: hs71.cpp
resources/: CMakeLists.txt
resources/include/: bqpd.hpp  ma27.hpp
uno/ingredients/subproblem_solvers/: SymmetricIndefiniteLinearSolverFactory.hpp
uno/ingredients/subproblem_solvers/HiGHS/: HiGHSSolver.cpp
uno/linear_algebra/: SymmetricIndefiniteLinearSystem.hpp
uno/optimization/: Iterate.cpp  Model.cpp  ModelFactory.hpp  Result.hpp
uno/reformulation/: l1RelaxedProblem.hpp
uno/solvers/BQPD/: BQPDSolver.cpp  BQPDSolver.hpp
uno/solvers/HiGHS/: HiGHSSolver.cpp
uno/solvers/QP/: BQPDSolver.cpp  BQPDSolver.hpp
uno/solvers/linear/: MA27Solver.cpp  MA27Solver.hpp  SymmetricIndefiniteLinearSolverFactory.hpp
uno/tools/: Statistics.cpp  Statistics.hpp
unotest/functional_tests/: MUMPSSolverTests.cpp
